// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render should create style nodes and render CSS rules 1`] = `
"<html>

<head>
  <style data-fela-type=\\"FONT\\" type=\\"text/css\\">
    @font-face {
      font-weight: 300;
      src: url('../Lato.ttf') format('truetype');
      font-family: \\"Lato\\"
    }
  </style>
  <style data-fela-type=\\"KEYFRAME\\" type=\\"text/css\\">
    @-webkit-keyframes _2ahmm2 {
      0% {
        color: yellow
      }
      100% {
        color: orange
      }
    }

    @-moz-keyframes _2ahmm2 {
      0% {
        color: yellow
      }
      100% {
        color: orange
      }
    }

    @keyframes _2ahmm2 {
      0% {
        color: yellow
      }
      100% {
        color: orange
      }
    }
  </style>
  <style data-fela-type=\\"RULE\\" type=\\"text/css\\">
    ._p2crlx {
      background-color: red
    }

    ._t2jx0m {
      color: blue
    }
  </style>
</head>

<body></body>

</html>"
`;

exports[`render should not overwrite rehydrated styles 1`] = `
"<html>

<head>
  <style type=\\"text/css\\" data-fela-type=\\"RULE\\">
    ._guhc64 {
      color: yellow
    }

    ._1401qjb:hover {
      color: red
    }

    ._p2crlx {
      background-color: red
    }

    ._t2jx0m {
      color: blue
    }
  </style>
  <style type=\\"text/css\\" data-fela-type=\\"RULE\\" media=\\"(max-width: 800px)\\">
    ._1lngh76 {
      color: blue
    }
  </style>
</head>

<body></body>

</html>"
`;

exports[`render should not render multiple times 1`] = `
"<html>

<head>
  <style data-fela-type=\\"RULE\\" type=\\"text/css\\">
    ._p2crlx {
      background-color: red
    }

    ._t2jx0m {
      color: blue
    }
  </style>
</head>

<body></body>

</html>"
`;
